# grpc_health_proxy

./: .goreleaser.yml  BUILD.bazel  Dockerfile  MODULE.bazel  README.md  WORKSPACE  go.mod  go.sum  images.bzl  main.go  repositories.bzl
.github/workflows/: release.yaml
example/: Dockerfile  README.md  go.mod  go.sum
example/app/src/: grpc_server.go
example/certs/: CA_crt.pem  CA_key.pem  client_crt.pem  client_csr.pem  client_key.pem  grpc_server_crt.pem  grpc_server_csr.pem  grpc_server_key.pem  http_server_crt.pem  http_server_csr.pem  http_server_key.pem  openssl.cnf  proxy_client_crt.pem  proxy_client_key.pem
example/prometheus/: prometheus.yml
example/src/: grpc_client.go  grpc_server.go
example/src/echo/: echo.pb.go  echo.proto  echo.proto.pb  echo_grpc.pb.go  go.mod
