load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push", "oci_tarball", "oci_image_index")
load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(name = "gazelle")

go_binary(
    name = "main",
    out = "grpc_health_proxy",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
    goos = "linux", 
    goarch = "amd64",     
)

go_library(
    name = "cmd_lib",
    srcs = [
        "main.go",
    ],
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_golang_glog//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//credentials:go_default_library",
        "@org_golang_google_grpc//credentials/insecure:go_default_library",        
        "@org_golang_google_grpc//health/grpc_health_v1:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_x_net//http2:go_default_library",
    ],
)

pkg_tar(
    name = "app-tar",
    srcs = [":main"],
    package_dir = "/",
)

oci_image(
    name = "server-image",
    base = "@distroless_base",
    tars = [":app-tar"],   
    entrypoint = ["/grpc_health_proxy"],
    cmd = [],
    env = {},
    exposed_ports = [
        "8080/tcp",
    ],    
)

oci_tarball(
    name = "tar-docker",
    image = "server-image",
    format = "docker",
    repo_tags = ["index.docker.io/salrashid123/grpc_health_proxy"],
)

oci_image_index(
    name = "app-index",
    images = [
        ":server-image",
    ]
)

oci_tarball(
    name = "tar-oci-index",
    image = ":app-index",
    format = "oci",
    repo_tags = ["index.docker.io/salrashid123/grpc_health_proxy"],
)

oci_push(
    name = "push-image",
    image = ":server-image",
    repository = "index.docker.io/salrashid123/grpc_health_proxy",
    remote_tags = ["latest"]
)
